--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>数据可视化</title>
+    <title>数据可视化aa</title>
     <link href="static/styles/common.css" rel="stylesheet">
     <script src="static/scripts/Plugin/jquery-3.3.1.min.js"></script>
     <script src="static/scripts/Plugin/echarts.min.js"></script>
